# cykl-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
benches/: ds.rs
examples/: berlin52.rs  nearest_neighbour.rs
src/: data.rs  lib.rs  metric.rs  model.rs  node.rs  tests.rs  vrp.rs
src/alg/: cand_gen.rs  mod.rs  ropt.rs  solver.rs  solvers.rs  tests.rs  tour_gen.rs
src/alg/lkh/: mod.rs  moves.rs  searches.rs  solver.rs  types.rs
src/base/: mod.rs  repo.rs  tests.rs
src/solver/: greedy.rs  lkh.rs  mod.rs  nn.rs  tests.rs
src/tour/: array.rs  arraytour.rs  error.rs  mod.rs  node.rs  tests.rs  tll.rs  tlt.rs  twoleveltree.rs
tests/: integration.rs
tests/data/: eil22.vrp
