[package]
name = "cykl"
version = "0.1.0"
authors = ["1crcbl <1crcbl@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A heuristic solver for Travelling Salesman Problem"
repository = "https://github.com/1crcbl/cykl-rs.git"

keywords = ["heuristic", "lkh", "scientific", "travelling", "tsp"]
categories = ["algorithms", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.7"
getset = "0.1.1"
rand = "0.8.3"
# tspf = { git = "https://github.com/1crcbl/tspf-rs" }
tspf = { path = "../tspf" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
float-cmp = "0.8.0"

# [[bench]]
# name = "ds"
# harness = false